added delete product and delete all functionalities

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
     <form>
 
         <label for="name" >Product Name</label>
-        <input type="text" placeholder="name" id="productName" name="pnam"><br>
+        <input type="text" placeholder="product name" id="productName" name="pnam"><br>
 
-        <label for="age">Price</label>
-        <input type="text" placeholder="age" id="productPrice" name="pprice"><br>
+        <label for="price">Price</label>
+        <input type="text" placeholder="price" id="productPrice" name="pprice"><br>
 
-        <label for="adress">quantity</label>
-        <input type="text" placeholder="address" id="productQuantity" name="pquan"><br>
+        <label for="quantity">quantity</label>
+        <input type="text" placeholder="quantity" id="productQuantity" name="pquan"><br>
 
-        <label for="email">category</label>
-        <input type="text" placeholder="email" id="productCategory" name="pcat"><br><br>
+        <label for="category">category</label>
+        <input type="text" placeholder="category" id="productCategory" name="pcat"><br><br>
 
         <input type="submit" value="Create" id="create">
         </form> 
+
         <div id="deleteAll">
 
         </div>
+        
         <table>
             <thead>
               <tr>
